@@ -1,5 +1,9 @@
 2003-03-05 Damien Sandras  <dsandras@seconix.com>
 
+	* src/videograbber.cpp: Added workaround to bug in pwc 8.10.
+	
+2003-03-05 Damien Sandras  <dsandras@seconix.com>
+
 	* configure.in: Added requirement for libdv.
 
 2003-03-04 Damien Sandras  <dsandras@seconix.com>
